--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>✨ Mi Link en Bio</title>
+  <title>✨ Mis redes - @vicoaguilar_</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 
@@ -15,7 +15,7 @@
       <header class="profile">
         <img class="avatar" src="https://p16-sign-sg.tiktokcdn.com/tos-alisg-avt-0068/fd0931f536f5f16da22510c5404b176f~tplv-tiktokx-cropcenter:1080:1080.jpeg?dr=14579&refresh_token=6e4ce142&x-expires=1765947600&x-signature=RbgtTcWjTpRfVp5A6lgsnZkahag%3D&t=4d5b0474&ps=13740610&shp=a5d48078&shcp=81f88b70&idc=maliva" alt="Foto de perfil" />
         <h1 class="name">Vico Aguilar ✨</h1>
-        <p class="bio">Lifestyle · Beauty · GRWM 💗</p>
+        <p class="bio">💗</p>
       </header>
 
       <nav class="links" aria-label="Redes sociales">
