--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>✨ Mis redes - @vicoaguilar_</title>
   <link rel="stylesheet" href="styles.css" />
+  <link rel="icon" type="image/png" href="heart.png">
+  <link rel="apple-touch-icon" href="heart.png">
 </head>
 
 <body>
