--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <main class="wrap">
     <section class="card">
       <header class="profile">
-        <img class="avatar" src="https://p16-sign-sg.tiktokcdn.com/tos-alisg-avt-0068/fd0931f536f5f16da22510c5404b176f~tplv-tiktokx-cropcenter:1080:1080.jpeg?dr=14579&refresh_token=6e4ce142&x-expires=1765947600&x-signature=RbgtTcWjTpRfVp5A6lgsnZkahag%3D&t=4d5b0474&ps=13740610&shp=a5d48078&shcp=81f88b70&idc=maliva" alt="Foto de perfil" />
+        <img class="avatar" src="RenderedImage (1).JPEG" alt="Foto de perfil" />
         <h1 class="name">Vico Aguilar ✨</h1>
         <p class="bio">💗</p>
       </header>
