--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
     document.getElementById("year").textContent = new Date().getFullYear();
   </script>
 
-  <!-- Fondo aurora girly (SIN mouse) -->
  <script>
 (() => {
   const canvas = document.getElementById("bg");
@@ -65,7 +64,6 @@
   window.addEventListener("resize", resize);
   resize();
 
-  // Fondo blush
   function paintBase() {
     const g = ctx.createLinearGradient(0, 0, 0, H);
     g.addColorStop(0, "#fff0f6");
@@ -79,17 +77,15 @@
 
   const hearts = [];
 
-  // ====== AJUSTES IMPORTANTES ======
-  const spawnRate = 4.5;        // corazones por segundo (sube a 4.5 si quieres MÁS)
-  const maxHearts = 120;         // límite de corazones en pantalla (sube a 120 si tu PC aguanta)
-  const centerBias = 0.40;      // 0..1 (más alto = más centrado)
-  const xSpread = 0.95;         // ancho relativo de dispersión alrededor del centro (0.35 más cerrado, 0.75 más abierto)
+  const spawnRate = 4.5;    
+  const maxHearts = 120;       
+  const centerBias = 0.40;     
+  const xSpread = 0.95;      
 
   function rand(min, max) { return Math.random() * (max - min) + min; }
 
-  // Distribución triangular (más probabilidad en el centro)
   function triangular() {
-    return (Math.random() + Math.random()) / 2; // 0..1 pero más cerca del 0.5
+    return (Math.random() + Math.random()) / 2; 
   }
 
   function spawnHeart() {
@@ -97,12 +93,9 @@
 
     const centerX = W * 0.5;
 
-    // Posición X centrada (con sesgo al centro)
-    // triangular() da valores más cercanos a 0.5
     const t = triangular();
     const spreadPx = W * xSpread * 0.5;
 
-    // mezcla entre "total random" y "centrado"
     const centeredX = centerX + (t - 0.5) * 2 * spreadPx;
     const randomX = Math.random() * W;
     const x = centeredX * centerBias + randomX * (1 - centerBias);
@@ -113,8 +106,8 @@
       x,
       y: H + size + 40,
       size,
-      speed: rand(0.04, 0.10),            // MUY lento
-      drift: (Math.random() - 0.5) * 0.08, // lateral suave
+      speed: rand(0.04, 0.10),          
+      drift: (Math.random() - 0.5) * 0.08, 
       rot: rand(-0.25, 0.25),
       rotSpeed: rand(-0.0006, 0.0006),
       opacity: rand(0.65, 0.95)
@@ -128,7 +121,6 @@
     const dt = Math.min(32, t - last);
     last = t;
 
-    // Spawn continuo (sin intervalos, siempre estable)
     spawnCarry += (dt / 1000) * spawnRate;
     while (spawnCarry >= 1) {
       spawnHeart();
@@ -137,15 +129,13 @@
 
     paintBase();
 
-    // Dibujar/actualizar
     for (let i = hearts.length - 1; i >= 0; i--) {
       const h = hearts[i];
 
-      h.y -= h.speed * dt * 8;  // lento pero constante (tunea este número si lo quieres aún más lento: 6)
+      h.y -= h.speed * dt * 8;  
       h.x += h.drift * dt * 0.35;
       h.rot += h.rotSpeed * dt;
 
-      // Desvanecer suave al acercarse arriba
       const fadeZone = H * 0.25;
       const topDist = Math.max(0, (h.y - 0) / fadeZone);
       const fade = Math.min(1, Math.max(0, topDist));
@@ -158,13 +148,11 @@
       ctx.drawImage(heartImg, -h.size/2, -h.size/2, h.size, h.size);
       ctx.restore();
 
-      // Quitar cuando salga de arriba
       if (h.y < -h.size - 80) {
         hearts.splice(i, 1);
       }
     }
 
-    // Velito dreamy
     ctx.fillStyle = "rgba(255, 235, 245, 0.16)";
     ctx.fillRect(0, 0, W, H);
 
